--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,11 @@ body {
     padding: 40px;
 }
 
-.image img {
+.image {
     width: 100%;
+    height: 300px;
+    background-image: url("images/hero-mobile.jpg");
+    background-size: 100% 100%;
 }
 
 .title {
@@ -43,12 +46,77 @@ body {
 }
 
 .form {
-    text-align: center;
-    padding-top: 40px;
+    display: flex;
+    flex-direction: row;
+    width: 75%;
+    justify-content: center;
+    border: 1px solid hsl(0, 36%, 70%);
+    border-radius: 20px;
+    padding-left: 20px;
+    margin: 20px 50px;
+    opacity: 0.5;
 }
 
-.email-input {
-    border-radius: 25px;
-    width: 75%;
+input[type=email] {
+    flex-grow: 2;
+    border: none;
     height: 40px;
+    background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+}
+
+::placeholder {
+    color: hsl(0, 36%, 70%);
+}
+
+:-ms-input-placeholder {
+    color: hsl(0, 36%, 70%);
+}
+
+::-ms-input-placeholder {
+    color: hsl(0, 36%, 70%);
+}
+
+.button {
+    background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+    color: white;
+    width: 60px;
+    border-radius: 20px;
+    opacity: 1;
+}
+
+@media only screen and (min-width: 600px) {
+
+    .logo {
+        width: 40%;
+        float: left;
+    }
+
+    .body {
+        width: 50%;
+        height: 85vh;
+        padding-top: 10%;
+    }
+
+    .red-title, .title {
+        padding-left: 20%;
+        text-align: left;
+        line-height: 1.2em;
+        font-size: 4em;
+    }
+
+    .intro {
+        width: 70%;
+        padding-left: 10%;
+    }
+
+    .image {
+        background-image: url("images/hero-desktop.jpg");
+        float: right;
+        width: 40%;
+        height: 100vh;
+    }
+
+    .form {
+        margin-left: 20%;
+    }
 }
